--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>me and marwa counter</title>
     <meta name="language" content="en">
-    <meta name="title" content="Aoudumber Love Code">
-    <meta name="github" content="https://github.com/Aoudumber-Bade">
     <meta name="describe" content="Your support keeps me motivated! Feel free to contribute!">
     <link type="text/css" rel="stylesheet" href="./Love_files/default.css">
     <script type="text/javascript" src="./Love_files/jquery.min.js"></script>
@@ -41,7 +39,7 @@
                 </div>
             </div>
             <div id="clock-box">
-                <a href="https://www.instagram.com/aoudumber.dev/" target="_blank">Me</a> and <a href="https://www.instagram.com/aoudumber.dev/" target="_blank">U</a> together for
+                <a href="" target="_blank">Me</a> and <a href="" target="_blank">U</a> together for
                 <div id="clock"></div>
             </div>
             <canvas id="canvas" width="1100" height="680"></canvas>
